<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meditecfondo"
    tools:context="com.example.aguis.meditecclientapp.MainActivity">

    <Button
        android:onClick="logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/com_facebook_button_send_background"
        android:text="@string/logout"
        android:id="@+id/button2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titulomain2"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/imageView2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddAppointment"
        android:text="@string/addAppoinment"
        android:background="@drawable/com_facebook_button_send_background"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRemoveAppointment"
        android:text="@string/removeAppointment"
        android:background="@drawable/com_facebook_button_send_background"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btnAddAppointment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGetAppointment"
        android:text="@string/getAllAppointment"
        android:background="@drawable/com_facebook_button_send_background"
        android:layout_below="@+id/btnRemoveAppointment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

</RelativeLayout>
