<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meditecfondo"
    tools:context="com.example.aguis.meditecclientapp.RatingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ratingactivitytitle"
        android:id="@+id/imageView4"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:id="@+id/ratingBarDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="226dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etGetDoctorName"
        android:hint="@string/RatingDoctor"
        android:textColorHint="@color/com_facebook_blue"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/com_facebook_button_send_background"
        android:text="@string/findDoctor"
        android:layout_alignTop="@+id/etGetDoctorName"
        android:layout_toRightOf="@+id/btnSendInfo"
        android:layout_toEndOf="@+id/btnSendInfo"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp" />

    <Button
        android:id="@+id/btnSendInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/com_facebook_button_send_background"
        android:text="@string/sendDcotorPoint"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/tvDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/btnDoctor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
